CodeLouisville End Of Day (2/13/19)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <nav>
             <ul>
               <li><a  class="active" href="index.html">HOME</a></li>
-              <li><a href="pages/gallery.html">GALLERY</a></li>
+              <li><a href="pages/gallery.html">Gallery</a></li>
               <li><a href="pages/contact.html">CONTACT</a></li>
               <li><a href="pages/about.html">ABOUT</a></li>
 
@@ -59,8 +59,8 @@ Let's have a happy little tree in here. We're not trying to teach you a thing to
         <table align="center">
 
           <th colspan="2" class="pokeResults">Enter your DOB Below</th>
-            <tr><td>Enter Month</td><td><input type="text" class="pokeMonth" value="01, 02 ... 12"></td></tr>
-            <tr><td>Enter Day</td><td><input type="text" class="pokeDay" ></td></tr>
+            <tr><td>Enter Month</td><td><input type="text" label="Enter Month" class="pokeMonth" value="01, 02 ... 12"></td></tr>
+            <tr><td>Enter Day</td><td><input type="text" class="class="pokeDay" ></td></tr>
             <tr><td>Enter Year</td><td><input type="text" class="pokeYear" ></td></tr>
             <tr>
 
