--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
   <body id='top'>
     <nav>
       <ul>
-        <li><a class="active" href="#top">Home</a></li>
+        <li><a class="active" href="#">Home</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Contact Me</a></li>
         <li><a href="#">About</a></li>
       </ul>
     </nav>
+    <div class="mainBody">
+      <h1>Perkermern</h1>
+      <img alt="cats!" src="https://via.placeholder.com/300">
+      <img alt="cats!" src="https://via.placeholder.com/300">
+      <img alt="cats!" src="https://via.placeholder.com/300">
+      <img alt="cats!" src="https://via.placeholder.com/300">
+      <img alt="cats!" src="https://via.placeholder.com/300">
+
+
+    </div>
 
   </body>
 </html>
