--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" type="text/css" href="css\normalize.css">
   <link rel="stylesheet" type="text/css" href="css\styles.css">
   <link rel="stylesheet" type="text/css" href="css\media.css">
+  <link href='https://fonts.googleapis.com/css?family=Cousine' rel='stylesheet'>
+
 
   <title>Perkermern Snerp</title>
 </head>
@@ -19,11 +21,14 @@
     </nav>
     <div class="mainBody">
       <h1>Perkermern</h1>
-      <img alt="cats!" src="https://via.placeholder.com/300">
-      <img alt="cats!" src="https://via.placeholder.com/300">
-      <img alt="cats!" src="https://via.placeholder.com/300">
-      <img alt="cats!" src="https://via.placeholder.com/300">
-      <img alt="cats!" src="https://via.placeholder.com/300">
+      <div class="fp-pics">
+        <img alt="cats!" src="https://via.placeholder.com/300">
+        <img alt="cats!" src="https://via.placeholder.com/300">
+        <img alt="cats!" src="https://via.placeholder.com/300">
+        <img alt="cats!" src="https://via.placeholder.com/300">
+        <img alt="cats!" src="https://via.placeholder.com/300">
+        <img alt="cats!" src="https://via.placeholder.com/300">
+      </div>
 
       <script src="js/java.js"></script>
     </div>
