--- a/index.html
+++ b/index.html
@@ -22,12 +22,23 @@
     <div class="mainBody">
       <h1>Perkermern</h1>
       <div class="fp-pics">
-        <img alt="cats!" src="https://via.placeholder.com/300">
-        <img alt="cats!" src="https://via.placeholder.com/300">
-        <img alt="cats!" src="https://via.placeholder.com/300">
-        <img alt="cats!" src="https://via.placeholder.com/300">
-        <img alt="cats!" src="https://via.placeholder.com/300">
-        <img alt="cats!" src="https://via.placeholder.com/300">
+        <div class="clearfix">
+          <!-- TOE BEANS -->
+          <img class ="cat none" alt="cats!" src="https://via.placeholder.com/300">
+          <p class="">And that's when it becomes fun - you don't have to spend your time thinking about what's happening - you just let it happen. Mountains are so simple, they're hard. We start with a vision in our heart, and we put it on canvas.
+  We touch the canvas, the canvas takes what it wants. You can spend all day playing with mountains. We don't want to set these clouds on fire.
+  Use absolutely no pressure. Just like an angel's wing. And maybe a little bush lives there. There's nothing wrong with having a tree as a friend. All you need to paint is a few tools, a little instruction, and a vision in your mind. When things happen - enjoy them. They're little gifts.
+  You can do anything here - the only pre-requisite is that it makes you happy. Anyone can paint. Maybe there was an old trapper that lived out here and maybe one day he went to check his beaver traps, and maybe he fell into the river and drowned. We can always carry this a step further. There's really no end to this.
+  Now we can begin working on lots of happy little things. We artists are a different breed of people. We're a happy bunch. And right there you got an almighty cloud. You are only limited by your imagination.
+  Maybe there's a happy little waterfall happening over here. This is the way you take out your flustrations. Let's build some happy little clouds up here. The more we do this - the more it will do good things to our heart. We have no limits to our world. We're only limited by our imagination. Nice little fluffy clouds laying around in the sky being lazy.
+  Let's have a happy little tree in here. We're not trying to teach you a thing to copy. We're just here to teach you a technique, then let you loose into the world. We'll paint one happy little tree right here. I really believe that if you practice enough you could paint the 'Mona Lisa' with a two-inch brush.
+  </p>
+        </div>
+        <img class ="cat"  alt="cats!" src="https://via.placeholder.com/300">
+        <img class ="cat"  alt="cats!" src="https://via.placeholder.com/300">
+        <img class ="cat"  alt="cats!" src="https://via.placeholder.com/300">
+        <img class ="cat"  alt="cats!" src="https://via.placeholder.com/300">
+        <img class ="cat"  alt="cats!" src="https://via.placeholder.com/300">
       </div>
 
       <script src="js/java.js"></script>
