--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <div class="main-section">
         <div class="clearfix firstcontent content">
           <!-- TOE BEANS -->
-          <img class ="cat none" alt="cats!" src="https://via.placeholder.com/300">
+
+          <img class ="cat none" alt="cats!" src="img/TB1.jpg">
           <p class="">And that's when it becomes fun - you don't have to spend your time thinking about what's happening - you just let it happen. Mountains are so simple, they're hard. We start with a vision in our heart, and we put it on canvas.
             We touch the canvas, the canvas takes what it wants. You can spend all day playing with mountains. We don't want to set these clouds on fire.
             Use absolutely no pressure. Just like an angel's wing. And maybe a little bush lives there. There's nothing wrong with having a tree as a friend. All you need to paint is a few tools, a little instruction, and a vision in your mind. When things happen - enjoy them. They're little gifts.
@@ -38,11 +39,13 @@
           </p>
         </div>
         <div class="content">
-          <img class ="cat"  alt="cats!" src="https://via.placeholder.com/300">
-          <img class ="cat"  alt="cats!" src="https://via.placeholder.com/300">
-          <img class ="cat"  alt="cats!" src="https://via.placeholder.com/300">
-          <img class ="cat"  alt="cats!" src="https://via.placeholder.com/300">
-          <img class ="cat"  alt="cats!" src="https://via.placeholder.com/300">
+          <img class ="cat"  alt="cats!" src="img/TB1.jpg">
+          <img class ="cat"  alt="cats!" src="img/TB2.jpg">
+          <img class ="cat"  alt="cats!" src="img/TB3.jpg">
+          <img class ="cat"  alt="cats!" src="img/TB4.jpg">
+          <img class ="cat"  alt="cats!" src="img/TB1.jpg">
+          <img class ="cat"  alt="cats!" src="img/TB4.jpg">
+
         </div>
 
         <div class="content">
