--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="NavBar">
       <nav>
         <ul>
-          <li><a class="active" href="#">Home</a></li>
+          <li><a class="active centered" href="#">Home</a></li>
           <li><a href="https://random.cat" target="_blank">Random Cat</a></li>
           <li><a href="#">Contact Me</a></li>
           <li><a href="#">About</a></li>
@@ -27,6 +27,7 @@
     </div>
     <div class="mainBody">
       <h1>Toe Beans R Us</h1>
+      <hr/>
       <div class="main-section">
         <div class="clearfix firstcontent content">
           <!-- TOE BEANS -->
@@ -51,7 +52,7 @@
       </div>
     </div>
     <div class="secondary-content">
-      <div class="content">
+      <div class="content flex-cats">
         <img class ="cat"  alt="cats!" src="img/TB1.jpg">
         <img class ="cat"  alt="cats!" src="img/TB2.jpg">
         <img class ="cat"  alt="cats!" src="img/TB3.jpg">
