--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="NavBar">
       <nav>
         <ul>
-          <li><a class="active centered" href="#">Home</a></li>
+          <li class='center'><a class="active centered" href="#">Home</a></li>
           <li><a href="https://random.cat" target="_blank">Random Cat</a></li>
           <li><a href="#">Contact Me</a></li>
           <li><a href="#">About</a></li>
